--- a/HELP.html
+++ b/HELP.html
@@ -12,7 +12,7 @@
 Aperture Science Remote Shell Help
 (c) 2017
 <br>
-Avalible online <a href="http://www.github.com/Tmanbear/GLaDOS/help.html">here</a>
+Avalible online <a href="https://github.com/Tmanbear/Aperture-Science-Remote-Shell---SourceCode/help.html">here</a>
 <br>
 <br>
 play - music subshell<br>
